# vercel-mcp

./: Dockerfile  README.md  pyproject.toml  vercel_mcp.py
.github/workflows/: ci.yml  publish.yml
vercel_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
