[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vercel-mcp"
version = "0.1.0"
description = "MCP + HTTP server for Vercel REST API. Manage projects, deployments, domains, and env vars. Zero dependencies."
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
keywords = ["mcp", "vercel", "deployments", "model-context-protocol", "devops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Build Tools",
    "Environment :: Console",
]

[project.urls]
Homepage = "https://github.com/amerilain/vercel-mcp"
Repository = "https://github.com/amerilain/vercel-mcp"
Issues = "https://github.com/amerilain/vercel-mcp/issues"

[project.scripts]
vercel-mcp = "vercel_mcp:main"
